@@ -1,3 +1,9 @@
+2003-07-11  David Ayers  <d.ayers@inode.at>
+
+	* ANTLRCommon.h: Include GNUstep.h if GNUSTEP is not defined for
+	OS X.
+	* ANTLRBitSet.m; Update include syntax.
+
 2001-08-20  Adam Fedor  <fedor@gnu.org>
 
 	* Update to work with antlr 2.7.1.  NOTE: This breaks gsweb
